--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Append Text to JSON File</title>
 </head>
 <body>
-  <form action="server.js" method="POST">
+  <form action="/api/" method="POST">
     <input type="text" name="data" placeholder="Enter text to append">
     <input type="submit" value="Submit">
   </form>
